--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "bulma-pro": "^0.1.8",
     "is-electron": "^2.2.0",
     "material-design-icons": "^3.0.1",
+    "range-js": "^0.0.4",
     "vue": "^2.6.10",
     "vue-electron": "^1.0.6",
     "vue-router": "^3.1.3",
@@ -19,10 +20,16 @@
     "@babel/plugin-proposal-object-rest-spread": "^7.7.4",
     "@babel/preset-env": "^7.7.6",
     "@babel/preset-typescript": "^7.7.4",
+    "@types/jest": "^24.0.23",
     "@typescript-eslint/eslint-plugin": "^2.11.0",
     "@typescript-eslint/parser": "^2.11.0",
+    "@vue/cli-plugin-babel": "^4.1.1",
     "@vue/cli-plugin-eslint": "^4.1.1",
+    "@vue/cli-plugin-typescript": "^4.1.1",
     "@vue/cli-service": "^4.1.1",
+    "@vue/eslint-config-prettier": "^6.0.0",
+    "@vue/eslint-config-standard": "^5.0.1",
+    "@vue/eslint-config-typescript": "^5.0.1",
     "acorn": "^7.1.0",
     "babel-eslint": "^10.0.3",
     "babel-loader": "^8.0.6",
@@ -36,12 +43,17 @@
     "electron-rebuild": "^1.8.8",
     "eslint": "^6.7.2",
     "eslint-config-prettier": "^6.7.0",
+    "eslint-plugin-import": "2.18.0",
+    "eslint-plugin-node": "^10.0.0",
     "eslint-plugin-prettier": "^3.1.1",
+    "eslint-plugin-promise": "^4.2.1",
+    "eslint-plugin-standard": "^4.0.1",
     "eslint-plugin-vue": "^6.0.1",
     "fast-glob": "^3.1.1",
     "file-loader": "^5.0.2",
     "html-webpack-plugin": "^3.2.0",
     "husky": "^3.1.0",
+    "jest": "^24.9.0",
     "mini-css-extract-plugin": "^0.8.0",
     "node-loader": "^0.6.0",
     "npm-run-all": "^4.1.5",
@@ -52,6 +64,7 @@
     "sass-loader": "^8.0.0",
     "style-loader": "^1.0.1",
     "tree-kill": "^1.2.2",
+    "ts-jest": "^24.2.0",
     "typescript": "^3.7.3",
     "url-loader": "^3.0.0",
     "vue-devtools": "^5.1.3",
@@ -97,6 +110,11 @@
     "release": "run-s test build",
     "test": "run-s rebuild:node pack:workers jest",
     "test:watch": "run-s rebuild:node pack:workers jest:watch"
+  },
+  "husky": {
+    "hooks": {
+      "pre-commit": "pretty-quick --staged"
+    }
   },
   "version": "0.0.1"
 }
